<resources>

    <string name="app_name">Quick Cabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="edit">Edit</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="rememberme">Remember me</string>
    <string name="signup">SIGNUP</string>
    <string name="signup2">Sign Up</string>
    <string name="hirecab">Hire a Cab</string>
    <string name="sheduledhire">Shedule a Cab</string>
    <string name="history">Hire History</string>
    <string name="promotioins">Promotions</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="retypePassword">Retype the password</string>
    <string name="signuptitle">Enter Your Details</string>
    <string name="profilename">Jerry Miller</string>
    <string name="totalHires">Total Hires : 53</string>
    <string name="phoneNumber">Mobile : 0123456789</string>
    <string name="emailaddress">Email : jerrymiller@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="enterdestination">Enter Destination</string>
    <string name="enterpickuplocation">Enter a Pickup Location</string>
    <string name="search">Search</string>
    <string name="selectvehicle">Select Vehicle type</string>
    <string name="selectadate">Select A Date</string>
    <string name="selectatime">Select Time</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="google_maps_PI_key">AIzaSyCcL4NV-D2hP2kF6iqlzAn6MWVrMYNFiUQ</string>



</resources>
