<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/app_bar_main">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo2"
            android:scaleType="centerInside"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.1"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background"
                    android:layout_marginTop="15dp"
                    android:drawableLeft="@drawable/username_drawable_selector"
                    android:drawablePadding="10dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableLeft="@drawable/password_drawable_selector"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="8dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/rememberme"
                    android:textSize="13dp"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/forgetpassword"
                    android:textSize="13dp"
                    android:clickable="true"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.47"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:paddingTop="7dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/whiteText"
                    android:text="@string/signup"
                    android:background="@drawable/edit_text_background"
                    android:textSize="15dp"
                    android:layout_weight="1"
                    android:layout_marginRight="3dp"
                    android:onClick="register"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/whiteText"
                    android:text="@string/login"
                    android:background="@drawable/edit_text_background"
                    android:textSize="15dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:onClick="login"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>