<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="20">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profile2"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:src="@drawable/ic_edit_black_24dp"
                android:clickable="true"
                android:scaleType="fitEnd"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/profileusername"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/profilename"
                android:textColor="@color/whiteText"
                android:gravity="center"
                android:textSize="30dp"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:text="@string/totalHires"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:text="@string/emailaddress"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/profileMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:text="@string/phoneNumber"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:gravity="bottom">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@color/whiteText"
                    android:text="@string/logout"
                    android:background="@drawable/edit_text_background"
                    android:textSize="18dp"
                    android:padding="12dp"
                    android:onClick="logout"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>